--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,17 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.tms.testngscripts.LOG</td>
+<td>com.tms.newpack.DemoTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>log</td>
+<td>tc</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>browser</td>
-<td>regression smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -29,10 +24,5 @@
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>regression smoke </td>
 </tr>
 </table>
