--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e69ade">  <td>22/08/25 10:36:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.browser()[pri:0, instance:org.tms.testngscripts.LOG@8e24743]">&gt;&gt;browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@520232556</td>   <td></td> </tr>
-<tr bgcolor="e69ade">  <td>22/08/25 10:37:23</td>   <td>26518</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:org.tms.testngscripts.LOG@8e24743]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@520232556</td>   <td></td> </tr>
-<tr bgcolor="e69ade">  <td>22/08/25 10:36:57</td>   <td>-21</td> <td title="&gt;&gt;BaseClass.dbConnection()[pri:0, instance:org.tms.testngscripts.LOG@8e24743]">&gt;&gt;dbConnection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@520232556</td>   <td></td> </tr>
-<tr bgcolor="e69ade">  <td>22/08/25 10:37:23</td>   <td>26732</td> <td title="&lt;&lt;BaseClass.dbConnectionClosing()[pri:0, instance:org.tms.testngscripts.LOG@8e24743]">&lt;&lt;dbConnectionClosing</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@520232556</td>   <td></td> </tr>
-<tr bgcolor="88c1b2">  <td>22/08/25 10:37:03</td>   <td>6274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LOG.log()[pri:0, instance:org.tms.testngscripts.LOG@8e24743]">log</td> 
-  <td>main@520232556</td>   <td></td> </tr>
+<tr bgcolor="9f73a2">  <td>22/08/29 13:11:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.tc()[pri:0, instance:com.tms.newpack.DemoTest@29b5cd00]">tc</td> 
+  <td>main@183284570</td>   <td></td> </tr>
 </table>
